<resources>
    <string name="app_name">MindSharpener</string>
    <string name="text_view1">Instructions:</string>
    <string name="text_view2">This is a simple mathematic games which is believe can train your mind. Two numbers are given randomly based on your level choice with a mathematic operator. You just calculates the answer, write your answer and press check button. Every correct answer will give you 1 point and any wrong answer will deduct 1 point.</string>
    <string name="text_view3">Choose Level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="text_view4">+</string>
    <string name="text_view5">1</string>
    <string name="text_view6">2</string>
    <string name="your_answer">Your Answer</string>
    <string name="button">Check</string>
    <string name="text_view7">POINT : 0</string>
</resources>