<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="123dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/text_view1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/text_view2"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="356dp"
        android:layout_height="110dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="138dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="188dp"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:text="@string/text_view3"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="347dp"
            android:layout_height="59dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/easy" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:text="@string/hard" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="69dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="257dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view5" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="138dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="326dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:text="@string/your_answer" />

        <Button
            android:id="@+id/button2"
            android:layout_width="270dp"
            android:layout_height="37dp"
            android:text="@string/button" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>